main app now works on iOS, without scrolling issues; Updated error message placement for desktop version; moved components into flex boxes

--- a/bicycleparking/static/src/style/leaflet.css
+++ b/bicycleparking/static/src/style/leaflet.css
@@ -646,5 +646,3 @@
 	margin-left: -12px;
 	border-right-color: #fff;
 	}
-
-#map { height: 65%; }
